--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section class="landing">
     <div class="landing-content">
       <h1>Are you a...</h1>
-      <a href="Businessowner.html" class="btn">Business Owner Looking for Campus Ambassadors</a>
+      <a href="/Users/edwinulysse/RecruitingWeb/Businessowner.html " class="btn">Business Owner Looking for Campus Ambassadors</a>
       <p>or</p>
       <a href="#" class="btn">College Student Looking to Become a Campus Ambassador</a>
     </div>
