--- a/Campusambassador.html
+++ b/Campusambassador.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Business Owner | AmbassaMatch</title>
+  <title>Student Campus Ambassador | nretnI</title>
   <style>
     /* CSS code */
     /* Reset some default styles */
@@ -126,33 +126,34 @@
   </header>
   <section class="page">
     <div class="container">
-      <h2>Benefits for Business Owners</h2>
+      <h2>Benefits for Student Campus Ambassadors</h2>
       <div class="page-content">
         <div class="benefit">
-          <h3>Brand Promotion</h3>
-          <p>Our campus ambassadors will actively promote and raise awareness of your brand on college campuses, reaching a diverse and engaged audience.</p>
+          <h3>Networking Opportunities</h3>
+          <p>As a campus ambassador, you'll have the chance to connect with professionals, fellow students, and industry leaders, expanding your network and creating valuable connections for future career opportunities.</p>
         </div>
         <div class="benefit">
-          <h3>Word-of-Mouth Marketing</h3>
-          <p>By utilizing campus ambassadors, you tap into the power of word-of-mouth marketing, as they share positive experiences and recommendations with their peers.</p>
+          <h3>Potential Full-Time Roles</h3>
+          <p>Many companies view campus ambassador roles as a pipeline for talent. By excelling in your role, you may gain visibility and consideration for potential post-graduation full-time positions within the company.</p>
         </div>
         <div class="benefit">
-          <h3>Targeted Audience</h3>
-          <p>We carefully match your brand with campus ambassadors who align with your target audience, ensuring effective brand messaging and engagement.</p>
+          <h3>Resume Building Experiences</h3>
+          <p>Being a campus ambassador provides valuable experiences and skills that can enhance your resume. It showcases your leadership, communication, and marketing abilities, making you stand out to future employers.</p>
         </div>
         <div class="benefit">
-          <h3>Expanded Reach</h3>
-          <p>Expand your brand's reach and visibility on multiple college campuses through the extensive network of our dedicated campus ambassadors.</p>
+          <h3>Additional Income Streams</h3>
+          <p>Alongside gaining experience, some campus ambassador programs offer financial incentives such as commissions, stipends, or rewards, providing an opportunity to earn additional income while representing a brand you believe in.</p>
         </div>
         <div class="benefit">
-          <h3>Commission-Based Interns</h3>
-          <p>In addition to campus ambassadors, we offer commission-based interns who can assist with various tasks, providing extra support and value to your business.</p>
+          <h3>Professional Development</h3>
+          <p>Through training, mentorship, and real-world marketing experiences, you'll develop essential professional skills, including communication, teamwork, time management, and problem-solving, setting you up for success in your future career.</p>
         </div>
       </div>
       <div class="pricing-btn-container">
-        <a href="./Pricing.html" class="pricing-btn">Pricing</a>
+        <a href="./Jobapp.html" class="pricing-btn">Apply Now</a>
       </div>
     </div>
   </section>
 </body>
 </html>
+
