--- a/Campusambassador.html
+++ b/Campusambassador.html
@@ -118,11 +118,11 @@
 <body>
   <header>
     <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="./Contact.html">Contact</a></li>
-    </ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./Businessowner.html">Business Owner</a></li>
+        <li><a href="./Campusambassador.html">Student</a></li>
+        <li><a href="./Contact.html">Contact</a></li>
+      </ul>
   </header>
   <section class="page">
     <div class="container">
