--- a/Businessowner.html
+++ b/Businessowner.html
@@ -119,8 +119,8 @@
   <header>
     <ul>
       <li><a href="./index.html">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
+      <li><a href="./Businessowner.html">Business Owner</a></li>
+      <li><a href="./Campusambassador.html">Student</a></li>
       <li><a href="./Contact.html">Contact</a></li>
     </ul>
   </header>
