--- a/Pricing.html
+++ b/Pricing.html
@@ -163,12 +163,12 @@
     <h1>AmbassaMatch</h1>
     <p>Connecting businesses with passionate campus ambassadors</p>
     <nav>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="./Contact.html">Contact</a></li>
-      </ul>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./Businessowner.html">Business Owner</a></li>
+            <li><a href="./Campusambassador.html">Student</a></li>
+            <li><a href="./Contact.html">Contact</a></li>
+          </ul>
     </nav>
   </header>
   <section class="pricing">
