--- a/Thankyou.html
+++ b/Thankyou.html
@@ -44,6 +44,13 @@
       margin-bottom: 40px;
     }
 
+    .thank-you .next-steps {
+      font-size: 18px;
+      color: #777;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
     .doodle-calendar {
       text-align: center;
     }
@@ -54,13 +61,17 @@
     <section class="thank-you">
       <h2>Thank You for Your Application!</h2>
       <p>We appreciate your interest in joining nretnI as a student ambassador.</p>
+      <p class="next-steps">For next steps, please book an interview with our team.</p>
       <div class="doodle-calendar">
-        <!-- Replace the following line with your Doodle calendar embed code -->
-        <iframe src="https://your-doodle-calendar-embed-link" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/nretni/30min" style="min-width:320px;height:700px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
       </div>
     </section>
   </div>
 </body>
 </html>
+
 
 
