--- a/Schedulecall.html
+++ b/Schedulecall.html
@@ -72,7 +72,7 @@
   <section class="landing">
     <div class="landing-content">
       <h1>Are you...</h1>
-      <a href="#" class="btn">Looking to Schedule a Discovery Call</a>
+      <a href="./Discoverycall.html" class="btn">Looking to Schedule a Discovery Call</a>
       <p>or</p>
       <a href="#" class="btn">Ready to Pay</a>
     </div>
