--- a/Pricing.html
+++ b/Pricing.html
@@ -188,7 +188,7 @@
             <li>Expanded brand visibility</li>
             <li>Commission-based interns</li>
           </ul>
-          <a href="./Schedulecall.html" class="cta-btn">Get Started</a>
+          <a href="./Schedulecallyearly.html" class="cta-btn">Get Started</a>
         </div>
         <div class="pricing-table">
           <h3>3 Months</h3>
