--- a/Schedulecallyearly.html
+++ b/Schedulecallyearly.html
@@ -74,7 +74,7 @@
       <h1>Are you...</h1>
       <a href="./Discoverycall.html" class="btn">Looking to Schedule a Discovery Call</a>
       <p>or</p>
-      <a href="https://buy.stripe.com/6oEdRJdxG40P9So3ce" class="btn">Ready to Pay</a>
+      <a href="https://buy.stripe.com/dR6dRJbpy54TaWs001" class="btn">Ready to Pay</a>
     </div>
   </section>
 </body>
