--- a/Pricing.html
+++ b/Pricing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pricing | AmbassaMatch</title>
+  <title>Pricing | nretnI</title>
   <style>
     /* CSS code */
     /* Reset some default styles */
@@ -160,7 +160,7 @@
 </head>
 <body>
   <header>
-    <h1>AmbassaMatch</h1>
+    <h1>nretnI</h1>
     <p>Connecting businesses with passionate campus ambassadors</p>
     <nav>
         <ul>
