--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>AmbassaMatch</h1>
+      <h1>nretnI</h1>
       <p class="slogan">Building Connections, Empowering Success</p>
       <a href="./Getstarted.html" class="btn">Get Started</a>
     </div>
@@ -255,7 +255,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 AmbassaMatch. All rights reserved.</p>
+    <p>&copy; 2023 nretnI. All rights reserved.</p>
   </footer>
 </body>
 </html>
