--- a/Getstarted.html
+++ b/Getstarted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AmbassaMatch</title>
+  <title>nretnI</title>
   <style>
     /* CSS code */
     /* Reset some default styles */
