--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
       padding: 20px;
       text-align: center;
     }
+
+    * CSS code goes here */
+    /* Styles for desktop view */
+    /* ... */
+
+    /* Styles for tablet view */
+    @media (max-width: 768px) {
+      /* Adjustments for tablet view */
+      /* ... */
+    }
+
+    /* Styles for mobile view */
+    @media (max-width: 480px) {
+      /* Adjustments for mobile view */
+      /* ... */
+    }
   </style>
 </head>
 <body>
